force-app/main/default/objects/Course_Enrolment__c/Course_Enrolment__c.object-meta.xml
<CustomObject>
    <description>Junction object between Trainee (Contact) and Course__c</description>
    <label>Course Enrolment</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Enrolment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Enrolments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>