force-app/main/default/objects/Course_Enrolment__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <label>Attendee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Course Enrolments</relationshipLabel>
    <relationshipName>Course_Enrolments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>