force-app/main/default/objects/Course_Enrolment__c/fields/Enrolment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Date__c</fullName>
    <description>Date when the trainee enrolled in the course.</description>
    <inlineHelpText>Automatically populated upon enrolment.</inlineHelpText>
    <label>Enrolment Date</label>
    <type>Date</type>
</CustomField>