force-app/main/default/objects/Course_Enrolment__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the enrolment is currently active for tracking purposes.</description>
    <inlineHelpText>Checked by default for active enrolments; uncheck for inactive records.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>