force-app/main/default/objects/Course_Enrolment__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <description>Percentage of course completed by the trainee.</description>
    <inlineHelpText>Enter the percentage of the course completed (0-100).</inlineHelpText>
    <label>Progress %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>