force-app/main/default/objects/Course_Enrolment__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>How the enrolment was created (manual or automated).</description>
    <inlineHelpText>Indicates whether the enrolment was entered manually or via automation.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>