force-app/main/default/objects/Course_Enrolment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attendee__c</columns>
    <columns>Course__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>